--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <span></span>
                 <span></span>
             </div>
-            <ul>
+            <ul id="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#events">Events</a></li>
