--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
                     <p>+91 9787585270</p>
                 </div>
             </div>
+            h2>Promotion</h2>
+            <div class="staff-grid">
+               <div class="staff-member">
+                  <img src="https://via.placeholder.com/150" alt="Ilaiyanithi V">
+                   <h3>Digital Marketer</h3>
+                   <p>Ilaiyanithi V</p>
+               </div>
+            </div>
         </section>
     
         <section id="faq" class="section">
