--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
                     <p>+91 9787585270</p>
                 </div>
             </div>
-            h2>Promotion</h2>
+            <h2>Promotion</h2>
             <div class="staff-grid">
                <div class="staff-member">
-                  <img src="https://via.placeholder.com/150" alt="Ilaiyanithi V">
+                  <img src="./Screenshot_20240909-001917.jpg" alt="Ilaiyanithi V">
                    <h3>Digital Marketer</h3>
                    <p>Ilaiyanithi V</p>
                </div>
