--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="staff-member">
                     <img src="https://via.placeholder.com/150" alt="Mrs.G.Maria Josephine Rajathi">
-                    <h3>Debbing</h3>
+                    <h3>Debugging</h3>
                     <p>Mrs.G.Maria Josephine Rajathi AP/CSE</p>
                     <p>+91 9123456783</p>
                 </div>
