--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <p>Seconds</p>
                     </div>
                 </div>
-                <a href="#register" class="cta-button">Register Now</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfAeEKbAm_kpiBO_vYr4mIq5ZUMT8eoIoOylOYt2iYSnXLppA/viewform" class="cta-button">Register Now</a>
             </div>
             <div class="background-text">2k24</div>
             <div class="background-text2">CSE</div>
@@ -280,7 +280,7 @@
                 <div class="qr-code">
                     <img src="qrcode.png" alt="Registration QR Code">
                 </div>
-                <a href="https://forms.gle/your-google-form-link" class="register-button" target="_blank">Register Here</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfAeEKbAm_kpiBO_vYr4mIq5ZUMT8eoIoOylOYt2iYSnXLppA/viewform" class="register-button" target="_blank">Register Here</a>
             </div>
         </section>
     </main>
