--- a/index.html
+++ b/index.html
@@ -229,6 +229,18 @@
             </div>
             
         </section>
+
+        <section id="event-media" class="section">
+            <h2>Event Media</h2>
+            <div class="media-container">
+                <div class="event-poster">
+                    <img src="event-poster.jpg" alt="COMBLAZE 2K24 Event Poster">
+                </div>
+                <div class="dept-photo">
+                    <img src="dept-group-photo.jpg" alt="CSE Department Group Photo">
+                </div>
+            </div>
+        </section>
     
         <section id="faq" class="section">
             <h2>Frequently Asked Questions</h2>
