--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <p>Scan the QR code or click the button below to register for COMBLAZE 2K24:</p>
             <div class="registration-info">
                 <div class="qr-code">
-                    <img src="qrcode.png" alt="Registration QR Code">
+                    <img src="qrcode.jpeg" alt="Registration QR Code">
                 </div>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfAeEKbAm_kpiBO_vYr4mIq5ZUMT8eoIoOylOYt2iYSnXLppA/viewform" class="register-button" target="_blank">Register Here</a>
             </div>
