--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
             <h2>Our Staff</h2>
             <div class="staff-grid">
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Prof M.Noorunnisha">
+                    <img src="assets/staffs/nn.jpeg" alt="Prof M.Noorunnisha">
                     <h3>Convenor</h3>
                     <p>Prof M.Noorunnisha</p>
                     <p>AP/CSE</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Prof P Pavalakodi">
+                    <img src="assets/staffs/pk.jpeg" alt="Prof P Pavalakodi">
                     <h3>HOD/CSE</h3>
                     <p>Prof P Pavalakodi</p>
                 </div>
