--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <h2>Event Media</h2>
             <div class="media-container">
                 <div class="event-poster">
-                    <img src="event-poster.jpg" alt="COMBLAZE 2K24 Event Poster">
+                    <img src="assets/event-poster.jpg" alt="COMBLAZE 2K24 Event Poster">
                 </div>
                 <div class="dept-photo">
                     <img src="dept-group-photo.jpg" alt="CSE Department Group Photo">
