--- a/index.html
+++ b/index.html
@@ -155,49 +155,49 @@
             <h2>Faculty In-Charges</h2>
             <div class="staff-grid">
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Ms.M.Noorunnisha">
+                    <img src="assets/staffs/nn.jpeg" alt="Ms.M.Noorunnisha">
                     <h3>Paper Presentation</h3>
                     <p>Ms.M.Noorunnisha AP/CSE</p>
                     <p>+91 9123456781</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Mr.M.Prabu">
+                    <img src="assets/staffs/prabhu.jpeg" alt="Mr.M.Prabu">
                     <h3>Poster Presentation</h3>
                     <p>Mr.M.Prabu AP/CSE</p>
                     <p>+91 9123456782</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Mrs.G.Maria Josephine Rajathi">
+                    <img src="assets/staffs/mjr.jpeg" alt="Mrs.G.Maria Josephine Rajathi">
                     <h3>Debugging</h3>
                     <p>Mrs.G.Maria Josephine Rajathi AP/CSE</p>
                     <p>+91 9123456783</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Mr.P.Ranjith">
+                    <img src="assets/staffs/ranjith.jpeg" alt="Mr.P.Ranjith">
                     <h3>Technical Quiz</h3>
                     <p>Mr.P.Ranjith AP/CSE</p>
                     <p>+91 9123456784</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Mr.k.paul sunthar Singh">
+                    <img src="assets/staffs/pss.jpeg" alt="Mr.k.paul sunthar Singh">
                     <h3>Connection (Non-Tech)</h3>
                     <p>Mr.k.paul sunthar Singh AP/CSE</p>
                     <p>+91 9123456785</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Mrs.P.Pavalakodi">
+                    <img src="assets/staffs/pk.jpeg" alt="Mrs.P.Pavalakodi">
                     <h3>Short Film (Non-Tech)</h3>
                     <p>Mrs.P.Pavalakodi HOD/CSE</p>
                     <p>+91 9123456786</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Mr. Venkatesan">
+                    <img src="assets/staffs/vk.jpeg" alt="Mr. Venkatesan">
                     <h3>Craft (Non-Tech)</h3>
                     <p>Mr. Venkatesan AP/CSE</p>
                     <p>+91 9123456787</p>
                 </div>
                 <div class="staff-member">
-                    <img src="https://via.placeholder.com/150" alt="Mr. Venkatesan">
+                    <img src="assets/staffs/vk.jpeg" alt="Mr. Venkatesan">
                     <h3>Drawing (Non-Tech)</h3>
                     <p>Mr. Venkatesan AP/CSE</p>
                     <p>+91 9123456788</p>
@@ -207,22 +207,22 @@
             <h3 class="coordinators-title">Event Coordinators</h3>
             <div class="coordinators-grid">
                 <div class="coordinator">
-                    <img src="https://via.placeholder.com/150" alt="JayaBharath J">
+                    <img src="assets/students/jb.jpeg" alt="JayaBharath J">
                     <p>JayaBharath J</p>
                     <p>+91 8778758993</p>
                 </div>
                 <div class="coordinator">
-                    <img src="https://via.placeholder.com/150" alt="Srimath Hari Shesath R">
+                    <img src="assets/students/srimath.jpeg" alt="Srimath Hari Shesath R">
                     <p>Srimath Hari Shesath R</p>
                     <p>+91 9876543211</p>
                 </div>
                 <div class="coordinator">
-                    <img src="https://via.placeholder.com/150" alt="Vimal Raj">
+                    <img src="assets/students/jd.jpeg" alt="Vimal Raj">
                     <p>Vimal Raj</p>
                     <p>+91 8072138010</p>
                 </div>
                 <div class="coordinator">
-                    <img src="https://via.placeholder.com/150" alt="Sridhar S">
+                    <img src="assets/students/sridhar.jpeg" alt="Sridhar S">
                     <p>Sridhar S</p>
                     <p>+91 9787585270</p>
                 </div>
@@ -248,7 +248,7 @@
                 <div class="faq-item">
                     <h3 class="faq-question">When and where is COMBLAZE 2K24 taking place?</h3>
                     <div class="faq-answer">
-                        <p>COMBLAZE 2K24 is scheduled for September 23, 2024, from 9:00 AM to 5:00 PM at M.A.M College of Engineering, Main Campus.</p>
+                        <p>COMBLAZE 2K24 is scheduled for September 24, 2024, from 9:00 AM to 5:00 PM at M.A.M College of Engineering, Main Campus.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -299,7 +299,11 @@
 
     <footer>
         <a href="https://wa.me/918778758993" class="whatsapp-icon" target="_blank">
-            <img src="social.png" alt="WhatsApp">
+            <img src="soical.png" alt="WhatsApp">
+        </a>
+        
+        <a href="https://instagram.com/combalze_2k24/" class="instagram-icon" target="_blank">
+            <img src="social.png" alt="Instagram">
         </a>
         
         <p>© 2024 COMBLAZE - M.A.M College of Engineering. All rights reserved.</p>
