--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         </a>
         
         <a href="https://instagram.com/combalze_2k24/" class="instagram-icon" target="_blank">
-            <img src="social.png" alt="Instagram">
+            <img src="social1.png" alt="Instagram">
         </a>
         
         <p>© 2024 COMBLAZE - M.A.M College of Engineering. All rights reserved.</p>
