--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
 
     <footer>
         <a href="https://wa.me/918778758993" class="whatsapp-icon" target="_blank">
-            <img src="soical.png" alt="WhatsApp">
+            <img src="social.png" alt="WhatsApp">
         </a>
         
-        <a href="https://instagram.com/combalze_2k24/" class="instagram-icon" target="_blank">
+        <a href="https://instagram.com/comblaze_2k24/" class="instagram-icon" target="_blank">
             <img src="social1.png" alt="Instagram">
         </a>
         
