--- a/index.html
+++ b/index.html
@@ -93,31 +93,62 @@
             <h2>Event Schedule</h2>
             <div class="schedule-grid">
                 <div class="schedule-item">
-                    <span>09:00 AM</span>
+                    <span>09:30 AM - 10:30 AM</span>
                     <span>Inauguration</span>
-                    <span>Main Auditorium</span>
+                    <span>Kalam Hall</span>
                 </div>
                 <div class="schedule-item">
-                    <span>10:00 AM</span>
-                    <span>Technical Events Begin</span>
-                    <span>Various Locations</span>
+                    <span>10:30 AM - 10:45 AM</span>
+                    <span>Refreshments</span>
+                    <span>Kalam Hall</span>
                 </div>
                 <div class="schedule-item">
-                    <span>01:00 PM</span>
-                    <span>Lunch Break</span>
-                    <span>College Cafeteria</span>
+                    <span>10:30 AM - 11:30 AM</span>
+                    <span>White Paper Wizards</span>
+                    <span>Edision Hall</span>
                 </div>
                 <div class="schedule-item">
-                    <span>02:00 PM</span>
-                    <span>Non-Technical Events Begin</span>
-                    <span>Various Locations</span>
+                    <span>10:30 AM - 11:30 AM</span>
+                    <span>Design Impact</span>
+                    <span>Dijikstra Lab</span>
                 </div>
                 <div class="schedule-item">
-                    <span>05:00 PM</span>
-                    <span>Closing Ceremony</span>
-                    <span>Main Auditorium</span>
+                    <span>11:45 AM - 01:00 PM</span>
+                    <span>Code Crackers</span>
+                    <span>Innovation Lab</span>
+                </div>
+                <div class="schedule-item">
+                    <span>11:45 AM - 01:00 PM</span>
+                    <span>Tech Braniac</span>
+                    <span>I Bit Lab</span>
+                </div>
+                <div class="schedule-item">
+                    <span>02:00 PM - 02:45 PM</span>
+                    <span>Connect Quest</span>
+                    <span>Edision Hall</span>
+                </div>
+                <div class="schedule-item">
+                    <span>02:00 PM - 02:45 PM</span>
+                    <span>Cine Creators</span>
+                    <span>Kalam Hall</span>
+                </div>
+                <div class="schedule-item">
+                    <span>02:45 PM - 03:30 PM</span>
+                    <span>Craftopia</span>
+                    <span>Innovation Lab</span>
+                </div>
+                <div class="schedule-item">
+                    <span>02:45 PM - 03:30 PM</span>
+                    <span>Sketch Saga</span>
+                    <span>ED Hall</span>
+                </div>
+                <div class="schedule-item">
+                    <span>03:30 PM - 04:30 PM</span>
+                    <span>Valediction</span>
+                    <span>Kalam Hall</span>
                 </div>
             </div>
+            <p class="contact-info">For queries contact: +91 90421 25940, +91 877 875 8993, +91 95858 37493</p>
         </section>
 
 
