--- a/index.html
+++ b/index.html
@@ -258,7 +258,30 @@
                     <p>+91 9787585270</p>
                 </div>
             </div>
-            
+        </section>
+        <section id="social-media" class="section">
+            <h2>Social Media Management</h2>
+            <div class="coordinators-grid">
+                <div class="coordinator">
+                    <img src="https://via.placeholder.com/150" alt="Ilaiyanithi V">
+                    <p>Ilaiyanithi V</p>
+                    <p>+91 1234567890</p>
+                </div>
+                <div class="coordinator">
+                    <img src="https://via.placeholder.com/150" alt="Aravind K">
+                    <p>Aravind K</p>
+                    <p>+91 9876543210</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="event-documents" class="section">
+            <h2>Event Documents</h2>
+            <div class="document-links">
+                <a href="assets/MC Agenda Comblaze 2k24.pdf" class="document-button" target="_blank">Event Rules</a>
+                <a href="assets/COMPLAZE 2K24 AGENDA.pdf" class="document-button" target="_blank">Event Agenda</a>
+                <a href="assets/COMPLAZE 2K24 Rules Final.pdf" class="document-button" target="_blank">Event Rules</a>
+            </div>
         </section>
 
         <section id="event-media" class="section">
@@ -338,6 +361,7 @@
         </a>
         
         <p>© 2024 COMBLAZE - M.A.M College of Engineering. All rights reserved.</p>
+        <p>Web Crafted by @0xarun</p>
         <div class="social-icons">
             <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
