--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@
             <h2>Social Media Management</h2>
             <div class="coordinators-grid">
                 <div class="coordinator">
-                    <img src="https://via.placeholder.com/150" alt="Ilaiyanithi V">
+                    <img src="assets/students/ilaiyanithi.jpg" alt="Ilaiyanithi V">
                     <p>Ilaiyanithi V</p>
                     <p>+91 1234567890</p>
                 </div>
                 <div class="coordinator">
-                    <img src="https://via.placeholder.com/150" alt="Aravind K">
+                    <img src="assets/students/aravind.jpg" alt="Aravind K">
                     <p>Aravind K</p>
                     <p>+91 9876543210</p>
                 </div>
