--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <h2>Social Media Management</h2>
             <div class="coordinators-grid">
                 <div class="coordinator">
-                    <img src="assets/students/ilaiyanithi.jpg" alt="Ilaiyanithi V">
+                    <img src="assets/students/ilaiyanithi.png" alt="Ilaiyanithi V">
                     <p>Ilaiyanithi V</p>
                     <p>+91 9342731168</p>
                 </div>
