--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
                 <div class="coordinator">
                     <img src="assets/students/ilaiyanithi.png" alt="Ilaiyanithi V">
                     <p>Ilaiyanithi V</p>
+                    <p>Digital Marketer</p>
                     <p>+91 9342731168</p>
                 </div>
                 <div class="coordinator">
