--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
             <div class="coordinators-grid">
                 <div class="coordinator">
                     <img src="assets/students/ilaiyanithi.png" alt="Ilaiyanithi V">
+                    <h3>Digital Marketer</h3>
                     <p>Ilaiyanithi V</p>
-                    <p>Digital Marketer</p>
                     <p>+91 9342731168</p>
                 </div>
                 <div class="coordinator">
